[project]
name = "pyLRT"
version = "0.2"
description = "A simple python interface/wrapper for LibRadTran"
authors = [
    {name = "Edward Gryspeerdt", email = "e.gryspeerdt@imperial.ac.uk"},
    {name = "Oliver Driver"}
]
dependencies = [
    "xarray",
    "numpy",
    "scipy",
    "netCDF4",
    "matplotlib"
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "BSD (3-clause)"}
maintainers = [
    {name = "Edward Gryspeerdt", email = "e.gryspeerdt@imperial.ac.uk"},
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.package-dir]
csat2 = "pyLRT"

[tool.pdm.build]
includes = ["*.py"]