[project]
name = "pyLRT"
version = "0.2"
description = "A simple python interface/wrapper for LibRadTran"
authors = [
    {name = "Edward Gryspeerdt", email = "e.gryspeerdt@imperial.ac.uk"},
    {name = "Oliver Driver"}
]
dependencies = [
    "xarray",
    "numpy",
    "scipy",
    "netCDF4",
    "matplotlib"
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "BSD (3-clause)"}
maintainers = [
    {name = "Edward Gryspeerdt", email = "e.gryspeerdt@imperial.ac.uk"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint]
select = [
  "E", "F", "A", "DTZ", "NPY", "I", "ISC", "B003", "B004", "B015", "PTH",
  "D100", "D101", "D102", "D103", "D104", "D105", "D200",
  "W191", "W291", "W293",
  "N801", "N804", "N805",
  "T100",
  "S105", "S106", "S108", "S604", "S602", "S609",
  "UP003", "UP005", "UP006", "UP007", "UP008", "UP032", "UP035",
  "RUF001", "RUF200", "RUF013",
  "C901",
  "COM818", "RSE102", "EM101"
]
exclude = [
  ".direnv", ".eggs", ".git", ".mypy_cache", ".nox", ".pytype",
  ".ruff_cache", ".tox", ".venv", "__pypackages__", "_build",
  "build", "dist", "venv", "__pycache__"
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104", "E402"]

[dependency-groups]
dev = [
  "ruff >=0.12.4",
  "pyright>=1.1.403",
  "pytest >=7.4.2, <8.0.0",
  "netCDF4",
]

[tool.pyright]
include = ["pyLRT"]
exclude = [
  "**/__pycache__",
]

typeCheckingMode = "standard"
reportMissingImports = "error"
